--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,41 @@
 *.class
+dist
+download
+push.sh
+remotebuild.py
 
-# Package Files #
-*.jar
-*.war
-*.ear
+## gradle
+/.gradle
+/build
+/eclipse
+/gradlew.bat
+
+## ForgeGradle
+/run
+/out
+
+## idea
+*.iml
+*.ipr
+*.iws
+
+## eclipse
+/.settings
+/.metadata
+/.classpath
+/.project
+/bin
+/.idea
+/client/
+/Server/
+/classes/
+## misc
+
+## Ignore OS cache files
+*.DS_Store
+_MACOSX
+Thumbs.db
+
+## Ignore unnecessary files
+*.log
+*.lck
